--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar fixed-top navbar-expand-md">
-    <a class="navbar-brand" href="Home.html">Home</a>
+    <a class="navbar-brand" href="index.html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
