--- a/Campus_Life.html
+++ b/Campus_Life.html
@@ -20,7 +20,7 @@
 <body>
   <!-- Navigation Bar -->
   <nav class="navbar fixed-top navbar-expand-md">
-    <a class="navbar-brand" href="Home.html">Home</a>
+    <a class="navbar-brand" href=".html">Home</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -92,7 +92,7 @@
   <section id="bot">
     <a class="footer-link" href="https://www.facebook.com/">Facebook</a>
     <a class="footer-link" href="https://www.instagram.com/?hl=zh-tw">Instagram</a>
-    <a class="footer-link" href="Home.html">Website</a>
+    <a class="footer-link" href="index.html">Website</a>
 
     <div class="row" style="margin: 0">
       <!-- Copyright -->
