--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <section id="bot">
     <a class="footer-link" href="https://www.facebook.com/">Facebook</a>
     <a class="footer-link" href="https://www.instagram.com/?hl=zh-tw">Instagram</a>
-    <a class="footer-link" href="Home.html">Website</a>
+    <a class="footer-link" href="index.html">Website</a>
 
     <div class="row" style="margin: 0">
       <!-- Copyright -->
