--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="Campus_Life.html">Campus Life</a>
+          <a class="nav-link" href="Campus_Life.html">Exchange Life</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="">Project</a>
