--- a/Campus_Life.html
+++ b/Campus_Life.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="Campus_Life.html">Campus Life</a>
+          <a class="nav-link" href="Campus_Life.html">Exchange Life</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="">Project</a>
@@ -41,7 +41,7 @@
 
   <!-- Top Section -->
   <section id="top">
-    <h1>Campus Life_🖋</h1>
+    <h1>Exchange Life_🖋</h1>
   </section>
 
   <!-- Middle Section -->
